forth/test/fail/test_dot_call_control.af
\ Must fail to compile.
fun: test_dot_call_control_fail { -- err }
  try
end
